--- a/packet/src/secretsharing.tex
+++ b/packet/src/secretsharing.tex
@@ -100,7 +100,7 @@ and \ref{sec:proof}.
 
 \subsection{Formal Definitions*}\label{sec:formal-defs}
 
-We'll now formally define what it means to be a secret sharing scheme and the 
+We'll now formally define what a secret sharing scheme is and the 
 properties such a scheme might have, using the standard notation in 
 cryptography. First, we'll define what a secret sharing scheme 
 does without giving implementation details (there could be multiple ways 
@@ -109,8 +109,10 @@ of achieving the same thing, after all).
 % This is the n-out-of-n definition
 \begin{definition}[Secret sharing scheme]\label{def:ss}
     Let $\D$ be the input domain and $\D_s$ be the share domain.
-    A secret sharing scheme is a pair of efficient algorithms $(\share, \rec)$
-    and an associated natural number $n$ such that
+    A secret sharing scheme is a pair of efficient\footnotemark algorithms 
+    $(\share, \rec)$ and an associated natural number $n$ such that
+    \footnotetext{running in a reasonable time, e.g. no more than a 
+    few seconds}
 
     \begin{itemize}
         \item \share~takes as input a secret $s \in \D$ and outputs $n$ 
@@ -188,9 +190,9 @@ Here's a visual representation:
     \end{pchstack}
     This scheme meets Definition~\ref{def:ss} with $n=2$. The input and share domains
     are both the integers, \share~correctly outputs two integers, and 
-    \rec~takes two integers and outputs another integer. \new{(If we give $\rec$
+    \rec~takes two integers and outputs another integer. (If we give $\rec$
     any other number of integers, it returns $\perp$; for simplicity, we'll 
-    leave this detail out of the algorithms in this section.)}
+    leave this detail out of the algorithms in this section.)
 
     Does this scheme have correctness? Answer in your head before reading on.
 
