--- a/packet/src/shamir.tex
+++ b/packet/src/shamir.tex
@@ -167,10 +167,6 @@ but so do many other degree-2 polynomials:
     % ytick={0,...,8},
 ]
 \addplot[domain=-1:5,samples=50,mark=none,thick]{x^2-4*x+3};
-\node (point1) at (axis cs: 0,3) {\textbullet};
-\node [above right,font=\small] at (point1) {$(0,3)$};
-\node (point2) at (axis cs: 4,3) {\textbullet};
-\node [above left,font=\small] at (point2) {$(4,3)$};
 % other degree-2 polys through these points
 %%% BW VERSION %%%%%%
 % \addplot[domain=-1:5,samples=50,mark=none,dotted]{-(x^2-4*x+3)+6};
@@ -178,6 +174,11 @@ but so do many other degree-2 polynomials:
 %%% COLOR VERSION %%%%%
 \addplot[domain=-1:5,samples=50,mark=none,magenta]{-(x^2-4*x+3)+6};
 \addplot[domain=-1:5,samples=50,mark=none,cyan]{x^2/4-x+3};
+% points (on top)
+\node (point1) at (axis cs: 0,3) {\textbullet};
+\node [above right,font=\small] at (point1) {$(0,3)$};
+\node (point2) at (axis cs: 4,3) {\textbullet};
+\node [above left,font=\small] at (point2) {$(4,3)$};
 \end{axis}
 \node [font=\small] at (8,5) {$f(x)=x^2-4x+3$};
 \node [font=\small,magenta] at (-1,1.3) {$f(x)=-x^2+4x+3$};
@@ -594,7 +595,7 @@ This doesn't violate correctness, however, because in that case
 we aren't running \rec~on outputs of the \share~algorithm, so 
 the correctness definition doesn't apply. Instead, what's happening 
 is that our scheme fails when the parties don't behave honestly.
-In cryptography, this means that the scheme is only secure in the 
+In cryptography, we say that the scheme is only secure in the 
 presence of \emph{semi-honest} adversaries (the scheme has 
 \emph{semihonest security}.) There are ways of fixing this scheme 
 to guarantee security against \emph{malicious} adversaries 
