update readme links and add answers; final version (remove colors)

--- a/packet/ans/probability.tex
+++ b/packet/ans/probability.tex
@@ -51,7 +51,6 @@
 \end{answer}
 
 \begin{answer}
-    \color{blue} % new
     To find $\Pr[B \mid A]$, we simply switch the places of $A$ and $B$ 
     in the formula:
     \[
@@ -62,7 +61,7 @@
         \item 0; $B$ takes up none of $A$'s space.
         \item $\frac{1}{16} \div \frac{1}{8} = \frac{1}{2}$; $B$ overlaps 
         with half of $A$.
-        \item $\frac{1}{8} \div \frac{1}{8} = 1$; $B$ covers $A$, so if our 
+        \item $\frac{1}{8} \div \frac{1}{8} = 1$; $B$ fully encompasses $A$, so if our 
         outcome is in $A$, it is certainly in $B$.
     \end{enumerate}
 \end{answer}
