--- a/packet/ans/secretsharing.tex
+++ b/packet/ans/secretsharing.tex
@@ -55,8 +55,8 @@
     }
     \end{pchstack}
 
-    \new{(If $\rec$ is run on the incorrect number of shares---anything except 
-    3 and $n$, respectively---the algorithms return $\perp$.)}
+    (Where if $\rec$ is run on the incorrect number of shares---anything except 
+    3 and $n$, respectively---the algorithms return $\perp$.)
 \end{answer}
 
 \subsection{Formal Definitions*}
